# generative_ai

./: README.md  pyproject.toml
generative_ai/: __init__.py  env_variables.py  exceptions.py  paths.py
generative_ai/llms/: __init__.py  gemini.py  mistralai.py
generative_ai/utils/: huggingface.py
scripts/: crew_ai_script.py  geminiai_script.py  prep.py
